[package]
name = "art-exposure"
edition = "2018"
license = "MIT"
author = "Pradyumna Shome"
description = "A Rust program to set macOS background to artwork from the Metropolitan Museum of Art."
repository = "https://github.com/PradyumnaShome/art-exposure"
version = "0.1.0"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand="0.3.14"
url = "2.2.2"
image = "0.24"
core-foundation = "0.7"
cocoa = "0.20.0"
dirs = "3.0"